--- a/client/src/styles/_forms.scss
+++ b/client/src/styles/_forms.scss
@@ -6,7 +6,7 @@
     gap: 1.5em;
     padding: 1em;
     width: calc(max(300px, 30vw));
-    button {
+    .formButton {
         border: 0.01em solid #000000;
         border-radius: 0.5em;
         padding: 0.5em;
