--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -82,7 +82,7 @@ main {
   width: calc(max(300px, 30vw));
 }
 
-.login button {
+.login .formButton {
   border: 0.01em solid #000000;
   border-radius: 0.5em;
   padding: 0.5em;
