--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -38,14 +38,21 @@ body {
     }
 }
 
+// main {
+//     display: flex;
+//     flex-direction: column;
+//     width: 100%;
+//     height: 100%;
+//     align-items: center;
+//     justify-content: center;
+//     flex-grow: 1;
+// }
+
 main {
+    height: 100%;
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100%;
-    align-items: center;
-    justify-content: center;
-    flex-grow: 1;
 }
 
 @import './_forms.scss';
