--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -8,12 +8,33 @@ $color5: #FAFF7F;
 * {
     font-family: 'Poppins' !important;
 }
+/* width */
+::-webkit-scrollbar {
+    width: 7px;
+  }
+  
+  /* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+  
+  /* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+  
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+ background: #555;
+}
 
 html {
     margin: 0;
     padding: 0;
     height: 100vh;
     width: 100vw;
+    background-color: #F9F5FF;
+    overflow-x: hidden;
 }
 
 body {
@@ -21,6 +42,7 @@ body {
     width: 100%;
     padding: 0;
     margin: 0;
+    background-color: #F9F5FF;
 }
 
 #root {
@@ -56,4 +78,3 @@ main {
 }
 
 @import './_forms.scss';
-@import './_landing.scss';
